--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <!-- Lets create a nav bar  -->
     <h2 id="top">Faux Navbar</h2>
-    <div>
+    <div class="my-nav">
         <div>
             <a href="./pages/newpage.html">Link 1</a>
         </div>
